tests/snapshots/r#mod__genin_inspect.snap
---
source: tests/mod.rs
expression: genin_inspect
---
+-------------+-------------+
|          cluster          |
+-------------+-------------+
|       datacenter-1        |
+-------------+-------------+
|  server-1   |  server-2   |
+-------------+-------------+
|  router-1   | storage-1-1 |
|  8081/3031  | 8081/3031   |
+-------------+-------------+
| storage-1-2 | storage-2-1 |
| 8082/3032   | 8082/3032   |
+-------------+-------------+
| storage-2-2 |             |
| 8083/3033   |             |
+-------------+-------------+
| stateboard  |             |
+-------------+-------------+

